syntax = "proto3";

package user;

service UserService {
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse) {}
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse) {}
}

message GetUserByIdRequest {
  int32 id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string avatar = 4;
  string total = 5;
  string status = 6;
  string role = 7;
  repeated Vehicle vehicles = 8;
  string password = 9;
}

message Vehicle {
  int32 id = 1;
  string type = 2;
  string license_plates = 3;
  string image = 4;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  User user = 1;
}
